--- a/language/es/inicio/content.xml
+++ b/language/es/inicio/content.xml
@@ -7,11 +7,11 @@
 		<heading_carousel_3></heading_carousel_3>
 		<p_carousel_3></p_carousel_3>
 
-		<heading_1>Heading 1</heading_1>
-		<marketing_1>prueba 1</marketing_1>
-		<heading_2>Heading 2</heading_2>
-		<marketing_2>prueba de texto 2</marketing_2>
-		<heading_3>Heading 3</heading_3>
-		<marketing_3>prueba de texto 3</marketing_3>
+		<heading_1>Todo en uno</heading_1>
+		<marketing_1>Controla el perfil transaccional de tus clientes, tus créditos  y cumple siempre con los lineamientos de los diferentes organos supervisores.</marketing_1>
+		<heading_2>Modular</heading_2>
+		<marketing_2>Da acceso controlado a tu personal en los diferentes módulos del sistema.</marketing_2>
+		<heading_3>Amigable</heading_3>
+		<marketing_3>Controla tu SOFOM sin perder el enfoque en lo que realmente importa.</marketing_3>
 	</dom>
 </content>
