--- a/language/es/main.xml
+++ b/language/es/main.xml
@@ -4,7 +4,8 @@
 		<caracteristicas>Características</caracteristicas>
 		<especificaciones_tecnicas>Especificaciones tecnicas</especificaciones_tecnicas>+
 		<contacto>Soporte</contacto>
-		<adquirir><![CDATA[<button class="btn btn-consulta">Adquierelo ahora!</button>]]></adquirir>
+		<adquirir><![CDATA[<button class="btn btn-consulta">¡Adquierelo ahora!</button>]]></adquirir>
+		<iniciar_sesion><![CDATA[<span class="login">Iniciar sesión</span>]]></iniciar_sesion>
 		<copyright>  Soluciones uVicate S.A. de C.V. © 2013  </copyright>
 		<mail>  contacto@uvicate.com  </mail>
 		<phone>  01.800.500.CREA</phone>
