--- a/language/es/inicio/content.xml
+++ b/language/es/inicio/content.xml
@@ -1,14 +1,14 @@
 <content>
 	<dom>
-		<heading_carousel_1>Titulo 1</heading_carousel_1>
+		<heading_carousel_1>Administra tu SOFOM desde cualquier dispositivo y en cualquier momento</heading_carousel_1>
 		<p_carousel_1></p_carousel_1>
-		<heading_carousel_2>Titulo 2</heading_carousel_2>
-		<p_carousel_2>Parrafo 2</p_carousel_2>
-		<heading_carousel_3></heading_carousel_3>
+		<heading_carousel_2>TraVi te ayuda a cumplir tus obligaciones ante los diferentes órganos supervisores</heading_carousel_2>
+		<p_carousel_2></p_carousel_2>
+		<heading_carousel_3>Obtén la información necesaria para la dirección de tu SOFOM</heading_carousel_3>
 		<p_carousel_3></p_carousel_3>
 
 		<heading_1>Todo en uno</heading_1>
-		<marketing_1>Controla el perfil transaccional de tus clientes, tus créditos  y cumple siempre con los lineamientos de los diferentes organos supervisores.</marketing_1>
+		<marketing_1>Controla el perfil transaccional de tus clientes, tus créditos  y cumple siempre con los lineamientos de los diferentes órganos supervisores.</marketing_1>
 		<heading_2>Modular</heading_2>
 		<marketing_2>Da acceso controlado a tu personal en los diferentes módulos del sistema.</marketing_2>
 		<heading_3>Amigable</heading_3>
